fix: ui issues on mobile

--- a/src/css/dashbaord.css
+++ b/src/css/dashbaord.css
@@ -114,6 +114,12 @@ section table th {
   transition: box-shadow 0.3s ease-in-out;
 }
 
+@media (max-width: 1024px) {
+  .course {
+    width: 100% !important;
+  }
+}
+
 .course:hover {
   box-shadow: 8px 8px 32px -8px rgba(0, 0, 0, 0.3);
 }
